[package]
name = "xc"
version = "0.1.0"
authors = ["Nikos Filippakis <nikolaos.filippakis@cern.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xc_lib"
path = "src/lib.rs"

[[bin]]
name = "xc"
path = "src/bin.rs"

[dependencies]
